[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/GGS/src/components/boolean/ggsBool.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/GGS/src/components/number_field/ggsNumberField.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Helpers/GUI/Pause/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/Theme/Themes/MenuTheme.tres" type="Theme" id=4]

[node name="PauseMenu" type="CenterContainer" groups=[
"DebugSettings",
]]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 4 )
use_top_left = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 0, 0 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -85.0
margin_top = -86.0
margin_right = 85.0
margin_bottom = 85.0

[node name="PauseMenuContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="PanelContainer/PauseMenuContainer"]
margin_right = 160.0
margin_bottom = 17.0
text = "Pause"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/PauseMenuContainer"]
margin_top = 21.0
margin_right = 160.0
margin_bottom = 25.0

[node name="ResumeButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 59.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 63.0
margin_right = 160.0
margin_bottom = 93.0
rect_min_size = Vector2( 160, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Restart"

[node name="SettingsButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 97.0
margin_right = 160.0
margin_bottom = 127.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "Settings"

[node name="ExitButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 131.0
margin_right = 160.0
margin_bottom = 161.0
rect_min_size = Vector2( 160, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Exit"

[node name="ExitMenuContainer" type="VBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 166.0

[node name="ExitMenuResumeButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
margin_right = 160.0
margin_bottom = 24.0
text = "Resume"

[node name="ExitMenuSaveButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 52.0
text = "Save & Exit"

[node name="ExitMenuExitButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
visible = false
margin_top = 56.0
margin_right = 150.0
margin_bottom = 80.0
text = "Exit"

[node name="DebugMenuContainer" type="VBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 464.0
margin_bottom = 262.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/DebugMenuContainer"]
margin_right = 459.0
margin_bottom = 257.0

[node name="VBoxContainerA" type="VBoxContainer" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_right = 287.0
margin_bottom = 257.0

[node name="Label" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_right = 287.0
margin_bottom = 17.0
text = "Debug options"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_top = 21.0
margin_right = 287.0
margin_bottom = 25.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_top = 29.0
margin_right = 287.0
margin_bottom = 221.0
columns = 2

[node name="Label" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_right = 197.0
margin_bottom = 17.0
text = "Infinite health"

[node name="InfiniteHealthCheckbox" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer" instance=ExtResource( 1 )]
margin_left = 236.0
margin_right = 252.0
margin_bottom = 17.0
size_flags_horizontal = 6
align = 1
setting_index = 3

[node name="Label7" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_top = 25.0
margin_right = 197.0
margin_bottom = 42.0
text = "Infinite damage"

[node name="InfiniteDamageCheckbox2" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer" instance=ExtResource( 1 )]
margin_left = 236.0
margin_top = 25.0
margin_right = 252.0
margin_bottom = 42.0
size_flags_horizontal = 6
align = 1
setting_index = 12

[node name="Label2" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_top = 50.0
margin_right = 197.0
margin_bottom = 87.0
text = "
Screen shake:"

[node name="Label3" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_left = 201.0
margin_top = 60.0
margin_right = 287.0
margin_bottom = 77.0

[node name="Label4" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_top = 100.0
margin_right = 197.0
margin_bottom = 117.0
text = "Duration"

[node name="DurationField" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer" instance=ExtResource( 2 )]
margin_left = 201.0
margin_top = 95.0
margin_right = 287.0
margin_bottom = 122.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
align = 1

[node name="Label5" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_top = 135.0
margin_right = 197.0
margin_bottom = 152.0
text = "Frequency"

[node name="FrequencyField" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer" instance=ExtResource( 2 )]
margin_left = 201.0
margin_top = 130.0
margin_right = 287.0
margin_bottom = 157.0
align = 1
setting_index = 1

[node name="Label6" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer"]
margin_top = 170.0
margin_right = 197.0
margin_bottom = 187.0
text = "Amplitude"

[node name="AmplitudeField" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/GridContainer" instance=ExtResource( 2 )]
margin_left = 201.0
margin_top = 165.0
margin_right = 287.0
margin_bottom = 192.0
max_value = 10.0
step = 0.1
align = 1
setting_index = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_top = 225.0
margin_right = 287.0
margin_bottom = 229.0

[node name="OkButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_left = 94.0
margin_top = 233.0
margin_right = 192.0
margin_bottom = 257.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "     OK     "

[node name="VSeparator" type="VSeparator" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 295.0
margin_bottom = 257.0

[node name="VBoxContainerB" type="VBoxContainer" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_left = 299.0
margin_right = 459.0
margin_bottom = 257.0

[node name="Label" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_right = 160.0
margin_bottom = 17.0
text = "Load level"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 21.0
margin_right = 160.0
margin_bottom = 25.0

[node name="LoadSlimeLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 59.0
rect_min_size = Vector2( 160, 30 )
text = "Slime"

[node name="LoadRatLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 63.0
margin_right = 160.0
margin_bottom = 93.0
rect_min_size = Vector2( 160, 30 )
text = "Rat"

[node name="LoadHouseLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 97.0
margin_right = 160.0
margin_bottom = 127.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "House"

[connection signal="draw" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_draw"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuResumeButton" to="." method="_on_ExitMenuResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuSaveButton" to="." method="_on_ExitMenuSaveButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuExitButton" to="." method="_on_ExitMenuExitButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadSlimeLevelButton" to="." method="_on_LoadSlimeLevelButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadRatLevelButton" to="." method="_on_LoadRatLevelButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadHouseLevelButton" to="." method="_on_LoadHouseLevelButton_pressed"]
